--- a/src/components/Main/Users/Users.module.css
+++ b/src/components/Main/Users/Users.module.css
@@ -4,6 +4,23 @@
     grid-row-gap: 10px;
 }
 
+.searchWrapper {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-column-gap: 5px;
+    font: bold 12px Verdana;
+}
+
+.searchInput {
+    font: 12px Verdana;
+    border: 1px solid royalblue;
+}
+
+.searchInput:focus {
+    border: 1px solid royalblue;
+    outline: none;
+}
+
 .preloader {
     width: 30px;
     margin: 0 auto;
